--- a/goods/templates/goods/catalog.html
+++ b/goods/templates/goods/catalog.html
@@ -12,46 +12,46 @@
 {% endblock %}
 
 {% block content %}
-<!-- Filter Form using only Bootstrap classes -->
-<div class="dropdown mb-2">
-    <button class="btn btn-outline-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-        Filters
-    </button>
+    <!-- Filter Form -->
+    <div class="dropdown mb-2">
+        <button class="btn btn-outline-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Filters
+        </button>
 
-    <form action="" method="get" class="dropdown-menu p-4 text-bg-dark">
-        <div class="mb-3">
-            <div class="form-check">
-                <input class="form-check-input" type="checkbox" name="on_sale" id="saleCheck" value="on" {% if request.GET.on_sale == 'on' %}checked{% endif %}>
-                {% comment %}<input type="hidden" name="q" value="{{ request.GET.q }}">{% endcomment %}
-                <label class="form-check-label" for="saleCheck">
-                    Sale Items
-                </label>
+        <form action="" method="get" class="dropdown-menu p-4 text-bg-dark">
+            <div class="mb-3">
+                <div class="form-check">
+                    <input class="form-check-input" type="checkbox" name="on_sale" id="saleCheck" value="on" {% if request.GET.on_sale == 'on' %}checked{% endif %}>
+                    {% comment %}<input type="hidden" name="q" value="{{ request.GET.q }}">{% endcomment %}
+                    <label class="form-check-label" for="saleCheck">
+                        Sale Items
+                    </label>
+                </div>
             </div>
-        </div>
-        <div class="mb-3">
-            <p class="mb-1">Sort by:</p>
-            <div class="form-check">
-                <input class="form-check-input" type="radio" name="order_by" id="defaultSort" value="default" checked {% if request.GET.order_by or request.GET.order_by == 'default' %}checked{% endif %}>
-                <label class="form-check-label" for="defaultSort">
-                    Default
-                </label>
+            <div class="mb-3">
+                <p class="mb-1">Sort by:</p>
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" name="order_by" id="defaultSort" value="default" checked {% if request.GET.order_by or request.GET.order_by == 'default' %}checked{% endif %}>
+                    <label class="form-check-label" for="defaultSort">
+                        Default
+                    </label>
+                </div>
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" name="order_by" id="priceLowHigh" value="price" {% if request.GET.order_by == 'price' %}checked{% endif %}>
+                    <label class="form-check-label" for="priceLowHigh">
+                        Price: Low to High
+                    </label>
+                </div>
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" name="order_by" id="priceHighLow" value="-price" {% if request.GET.order_by == '-price' %}checked{% endif %}>
+                    <label class="form-check-label" for="priceHighLow">
+                        Price: High to Low
+                    </label>
+                </div>
             </div>
-            <div class="form-check">
-                <input class="form-check-input" type="radio" name="order_by" id="priceLowHigh" value="price" {% if request.GET.order_by == 'price' %}checked{% endif %}>
-                <label class="form-check-label" for="priceLowHigh">
-                    Price: Low to High
-                </label>
-            </div>
-            <div class="form-check">
-                <input class="form-check-input" type="radio" name="order_by" id="priceHighLow" value="-price" {% if request.GET.order_by == '-price' %}checked{% endif %}>
-                <label class="form-check-label" for="priceHighLow">
-                    Price: High to Low
-                </label>
-            </div>
-        </div>
-        <button type="submit" class="btn btn-primary">Apply</button>
-    </form>
-</div>
+            <button type="submit" class="btn btn-primary">Apply</button>
+        </form>
+    </div>
 
 
   <!-- Main content block for displaying products -->
@@ -99,10 +99,11 @@
     {% endfor %}
   </div>
     <!-- Pagination section -->
+    {% if goods %}
     <nav aria-label="Page navigation">
         <ul class="pagination justify-content-center">
             <li class="page-item {% if not goods.has_previous %}disabled{% endif %}">
-                <a class="page-link" href="{% if goods.has_previous %}?{% change_params page=page %}{% else %}#{% endif %}" aria-label="Previous">
+                 <a class="page-link" href="{% if goods.has_previous %}?page={{goods.previous_page_number}}{% else %}#{% endif %}">
                     &laquo; Previous
                 </a>
             </li>
@@ -120,4 +121,5 @@
             </li>
         </ul>
     </nav>
+    {% endif %}
 {% endblock %}
