--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -44,9 +44,9 @@
                     </li>
                 </ul>
                 <!-- Search form -->
-                <form class="d-flex" style="margin-right: 20px;">
+                <form class="d-flex" style="margin-right: 20px;" role="search" action="{% url "catalog:search" %}" method="get">
                     <div class="input-group">
-                        <input type="search" class="form-control" placeholder="Search" aria-label="Search" aria-describedby="button-addon2">
+                        <input type="search" class="form-control" placeholder="Search" aria-label="Search" aria-describedby="button-addon2" name="q">
                         <button class="btn btn-outline-dark" type="submit" id="button-addon2">
                             <i class="bi bi-search"></i>
                         </button>
